fix: sonar issues, rename mismatch assert